Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17255

Translation doesn't work with resource qml file

    XMLWordPrintable

Details

    • aa2d36a3d7405c3130b27b41b0e3941ca466f3cd, ee000c3ef1288b83b7b8e2c9baa033075c05c68a

    Description

      When using a qml file as a resource file, translation doesn't work (but it does when used directly).
      You'll find a simple example attached, just use "main.qml" directly in the url instead of qrc:main.qml

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            nicolas Nicolas
            Votes:
            3 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes