Fix translation context for QML files.

Use the base file name as done in QtQuick 1, rather
than using the entire path. This also fixes QTBUG-17255
for QtQuick 2.

Change-Id: Ia27f6539f82d6caf6e7060b89ff1996d42ffb9cb
Reviewed-on: http://codereview.qt.nokia.com/2246
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>